# adk-mcp-sdk

./: CHANGELOG.md  Cargo.toml  README.md  mcp-server.example.toml
src/: health.rs  lib.rs  manifest.rs  risk.rs  tools.rs
